# anticipa-save

./: .env  .gitignore  README.md  index.html
android-app/: README.md  build.gradle.kts  firebase-bom-34.5.0.pom  gradle.properties  gradlew  gradlew.bat  local.properties  settings.gradle.kts
android-app/app/: build.gradle.kts  proguard-rules.pro
backend/: README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py
backend/app/api/routes/: __init__.py  preferences.py  system.py  vault.py
backend/app/schemas/: preferences.py  system.py  vault.py
backend/app/services/: preferences.py  risk.py  state.py  telemetry.py  vault.py
backend/tests/: test_system.py
frontend/: README.md  index.html  package.json  tailwind.config.ts  tsconfig.base.json  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  styles.css
frontend/src/components/: DataSelector.tsx  StatusCard.tsx  VaultList.tsx
frontend/src/hooks/: useSystemState.ts
frontend/src/lib/: api.ts  icons.tsx
src/: index.css
src/components/: CTASection.tsx  DashboardSection.tsx  FeaturesSection.tsx  Footer.tsx  HeroSection.tsx  HowItWorksSection.tsx  MetricsSection.tsx  Navbar.tsx
src/components/dashboard/: AddDeviceDialog.tsx  AnalyticsSection.tsx  DevicesSection.tsx  RecentActivity.tsx
src/integrations/supabase/: types.ts
src/pages/: Auth.tsx  Dashboard.tsx  Index.tsx
supabase/: config.toml
supabase/migrations/: 20251109174201_e785e6db-e227-425b-919f-2d893cfc015f.sql  20251109174257_0423e1c0-ac49-43ac-8b64-93f3fb33a159.sql
(+23 files in other folders)
