[project]
name = "sentinel-cloud-backend"
version = "0.1.0"
description = "Minimal FastAPI backend for Sentinel Cloud prototype."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "pydantic>=2.6.0",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.0",
    "pytest-asyncio>=0.23.7",
    "anyio>=4.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


